--- a/infra-platform-frontend/public/locales/en/devices.json
+++ b/infra-platform-frontend/public/locales/en/devices.json
@@ -1,5 +1,6 @@
 {
   "addDevice": "Add Device",
+  "addDeviceDescription": "Configure your device settings to add it to your inventory",
   "addFirstDevice": "Add First Device",
   "deviceCount": "{{count}} devices found",
   "noDevicesFound": "No devices found",
@@ -24,7 +25,9 @@
   },
   "status": {
     "online": "Online",
-    "offline": "Offline"
+    "offline": "Offline",
+    "active": "Active",
+    "inactive": "Inactive"
   },
   "statusFilter": "Status Filter",
   "statusOptions": {
@@ -58,6 +61,7 @@
   },
   "steps": {
     "basicInfo": "Basic Information",
+    "connectionDetails": "Connection Details",
     "standardConfig": "Standard Configuration",
     "customConfig": "Custom Configuration",
     "review": "Review"
@@ -71,6 +75,42 @@
   "manualConnectionParams": "Enter connection parameters for the plugin. These will be passed to the plugin when connecting to the device.",
   "rawJson": "Raw JSON",
   "author": "Author",
+  "enterBasicInfo": "Enter Basic Information",
+  "identificationDetails": "Device Identification",
+  "configureConnection": "Configure Connection Details",
+  "configureCustomDevice": "Configure Custom Device",
+  "operatingSystem": "Operating System",
+  "selectOs": "Select the operating system of your device",
+  "connectionParamsDescription": "Configure the parameters needed to connect to your device using this plugin",
+  "jsonEditorDescription": "Edit the connection parameters directly as JSON for advanced configuration",
+  "reviewTitle": "Review Device Configuration",
+  "authSettings": "Authentication Settings",
+  "authDescription": "Enter the authentication details for connecting to your device securely",
+  "advancedSettings": "Advanced Settings",
+  "advancedSettingsDescription": "Configure additional settings for fine-tuning the device connection",
+  "connectionTimeout": "Connection Timeout",
+  "timeoutDescription": "Maximum time to wait when connecting to the device",
+  "seconds": "seconds",
+  "selectPlugin": "Select Plugin",
+  "searchPlugins": "Search plugins...",
+  "changePlugin": "Change Plugin",
+  "noPluginsFound": "No plugins found matching your search",
+  "pluginInfo": "Plugin Information",
+  "pluginName": "Plugin Name",
+  "pluginVersion": "Plugin Version",
+  "homepage": "Homepage",
+  "compatibility": "Compatibility",
+  "apiVersion": "API Version",
+  "supportedOs": "Supported OS",
+  "allPlatforms": "All Platforms",
+  "unknown": "Unknown",
+  "verifiedPlugin": "Verified plugin by system administrator",
+  "verified": "Verified",
+  "resetToDefaults": "Reset to Defaults",
+  "formatJson": "Format JSON",
+  "expand": "Expand",
+  "collapse": "Collapse",
+  "invalidJson": "Invalid JSON format",
   "cards": {
     "systemInfo": "System Information",
     "cpuUsage": "CPU Usage",
@@ -90,7 +130,13 @@
     "overview": "Overview",
     "system": "System",
     "storage": "Storage",
-    "network": "Network"
+    "network": "Network",
+    "basic": "Basic",
+    "authentication": "Authentication",
+    "advanced": "Advanced",
+    "parameters": "Parameters",
+    "jsonEditor": "JSON Editor",
+    "details": "Details"
   },
   "systemInfo": {
     "hostname": "Hostname",
@@ -134,7 +180,7 @@
     "parameters": "Parameters"
   },
   "noDataAvailable": "No data available",
-  "noUiSchema": "This plugin does not define a UI schema",
+  "noUiSchema": "This plugin does not define a UI schema for parameter input. Use the JSON editor instead.",
   "advancedFilters": "Advanced Filters",
   "sortBy": "Sort By",
   "sortOptions": {
@@ -142,5 +188,30 @@
     "created": "Creation Date",
     "type": "Type",
     "status": "Status"
+  },
+  "nameHint": "A unique name to identify this device",
+  "ipAddressHint": "IP address or hostname to connect to this device",
+  "descriptionHint": "Optional description to provide additional information",
+  "hostnameHint": "Hostname or IP to connect via SSH",
+  "usernameHint": "SSH username for authentication",
+  "passwordHint": "SSH password for authentication",
+  "portHint": "SSH port (default: 22)",
+  "deviceTypeDescription": "Choose the type of device you want to add",
+  "pluginDescription": "Select a plugin that matches your device type for specialized connection and monitoring",
+  "basicInfoDescription": "Basic information helps identify and organize your device in the inventory",
+  "jsonEditor": "JSON Editor",
+  "deviceType": "Device Type",
+  "selectDeviceType": "Select Device Type",
+  "standardDeviceDescription": "Standard devices connect via SSH to Linux, Windows or MacOS systems",
+  "customDeviceDescription": "Custom devices use specialized plugins to connect to non-standard or proprietary systems",
+  "supportsSSH": "Supports SSH Connection",
+  "requiresPlugin": "Requires Plugin",
+  "docmentation": "Documentation",
+  "errorSavingDevice": "An error occurred while saving the device. Please check your inputs and try again.",
+  "info": {
+    "standardDeviceTitle": "Standard Device Selected",
+    "customDeviceTitle": "Custom Device Selected",
+    "standardDevice": "Standard devices connect using SSH protocols. Use this for typical Linux, Windows or MacOS servers and devices.",
+    "customDevice": "Custom devices require a plugin to establish connection. Use this for specialized hardware, IoT devices, or systems with proprietary interfaces."
   }
 }
